# CppTree

./: .gitignore  CMakeLists.txt  Readme.md  benchmark.cpp  main.cpp  parser.cpp  tests.cpp
inc/: loader.hpp  parser.hpp
src/: loader.cpp  parser.cpp
